# CMakeTutorial

./: .gitignore  .pre-commit-onfig.yaml  CMakeLists.txt  Makefile  README.md  cmakeRunScript.bat  cmakeRunScript.sh  conanfile.py  vcpkg.json
.github/workflow/: documentation.yml  windows.yml
HelloWorld/: CMakeLists.txt  Makefile  cmakeRunScript.sh  main.cpp  my_lib.h
HelloWorld/.github/workflow/: codeql.yml  documentation.yml  macos.yml  pre-commit.yml  ubuntu.yml
HelloWorld/app/: CMakeLists.txt  main.cpp
HelloWorld/cmake/: AddGitSubmodule.cmake  Docs.cmake  Sanitizers.cmake  Warnings.cmake
HelloWorld/configured/: CMakeLists.txt
HelloWorld/docs/html/: dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_677f5629af22451fe6adb0a42d3c7ac4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  my__lib_8cpp__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.md5  my__lib_8h_source.html
HelloWorld/docs/html/search/: all_3.js  functions_1.js
HelloWorld/src/my_lib/: CMakeLists.txt  my_lib.cpp
HelloWorld/src/my_lib/include/: my_lib.h
HelloWorld/tests/: main.cpp
app/: CMakeLists.txt  main.cpp
cmake/: Warnings.cmake
docs/html/: CMakeLists_8txt.html  dir_000001_000002.html  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.map  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  globals.html  globals_func.html  my__lib_2CMakeLists_8txt.html  my__lib_8cpp.html  my__lib_8cpp__incl.map  my__lib_8h__dep__incl.map
docs/html/search/: all_4.js  functions_2.js
tests/: CMakeLists.txt
